--- a/src/components/NavBarComponent/NavBar.css
+++ b/src/components/NavBarComponent/NavBar.css
@@ -1,36 +1,31 @@
-a.navbar-brand, nav li{
-    cursor: pointer;
-   
+a.navbar-brand,
+nav li {
+    cursor: pointer !important;
 }
 
-a.nav-link{
+a.nav-link {
     transition: all 0.1s ease-out 0s !important;
-    
-    text-transform:  capitalize;
+
+    text-transform: capitalize;
     font-weight: bold;
 }
 
-a.nav-link:hover{
-    
+a.nav-link:hover {
     color: #ca3d26 !important;
 }
 
-a.nav-link .active{
-    
+a.nav-link .active {
     border-top: 3px solid #ca3d26;
     padding-top: 1vw;
     margin: 0 auto;
-
 }
 
- 
-
-.sticky-nav-bg{
+.sticky-nav-bg {
     background-color: white;
     color: gray;
 }
 
-.nav-before::after{
+.nav-before::after {
     background: transparent url("../../img/bottom-white.png") repeat scroll 0 0;
     bottom: -5.7px;
     content: "";
@@ -40,19 +35,24 @@ a.nav-link .active{
     position: absolute;
     width: 100%;
     box-shadow: 0px 0px 2px 0px #000000;
-
 }
 
-a .button.bg-dark:hover, a .button.bg-dark {
-    background-color: #ffffff4a!important;
+a .button.bg-dark:hover,
+a .button.bg-dark {
+    background-color: #ffffff4a !important;
 }
-a .bg-dark:focus, a .bg-dark:hover, button.bg-dark:focus, button.bg-dark:hover {
+a .bg-dark:focus,
+a .bg-dark:hover,
+button.bg-dark:focus,
+button.bg-dark:hover {
     /* background-color: #1d2124!important; */
-    background-color: #ffffff4a!important;
+    background-color: #ffffff4a !important;
 }
 
-a button.bg-dark:hover, button.bg-dark:hover, button.bg-dark {
-    background-color: #ffffff4a!important;
+a button.bg-dark:hover,
+button.bg-dark:hover,
+button.bg-dark {
+    background-color: #ffffff4a !important;
 }
 
 .navbar-light .navbar-toggler {
@@ -60,14 +60,37 @@ a button.bg-dark:hover, button.bg-dark:hover, button.bg-dark {
     border-color: rgba(0, 0, 0, 0.075);
 }
 
-a.bg-dark:focus, a.bg-dark:hover, button.bg-dark:focus, button.bg-dark:hover {
-    background-color: #ffffff4a!important;
+a.bg-dark:focus,
+a.bg-dark:hover,
+button.bg-dark:focus,
+button.bg-dark:hover {
+    background-color: #ffffff4a !important;
 }
 
-#home > div > header > div > div.sticky-outer-wrapper.active > div > div > div > div > nav > button{
-    background-color: #ffffff4a!important;
+#home
+    > div
+    > header
+    > div
+    > div.sticky-outer-wrapper.active
+    > div
+    > div
+    > div
+    > div
+    > nav
+    > button {
+    background-color: #ffffff4a !important;
 }
 
-#home > div > header > div > div.sticky-outer-wrapper > div > div > div > div > nav > button{
-    background-color: #ffffff4a!important;
+#home
+    > div
+    > header
+    > div
+    > div.sticky-outer-wrapper
+    > div
+    > div
+    > div
+    > div
+    > nav
+    > button {
+    background-color: #ffffff4a !important;
 }
