--- a/src/components/HeaderComponent/CarouselComponent/Carousel-Styles.css
+++ b/src/components/HeaderComponent/CarouselComponent/Carousel-Styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   /* box-sizing: border-box;
   padding-top: 75px; */
 }
@@ -26,7 +26,7 @@ header section {
 @media (max-width: 1515px) {
   header section {
     max-width: 100%;
-  } 
+  }
 }
 
 header section .logo {
@@ -44,13 +44,13 @@ header section a {
 
 button {
   -webkit-appearance: none;
-          appearance: none;
+  appearance: none;
   -webkit-filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
-          filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
-  -webkit-transition: all .1s ease-in-out;
-         filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
-  -webkit-transition: all .1s ease-in-out;
-          transition: all .1s ease-in-out;
+  filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
+  -webkit-transition: all 0.1s ease-in-out;
+  filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
   border: 2px solid white;
   background: transparent;
   color: white;
@@ -64,10 +64,10 @@ button {
 }
 
 button:hover {
-  color: #FFFFFF;
-  background:#ca3d26;
+  color: #ffffff;
+  background: #ca3d26;
   -webkit-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
-          filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
 }
 
 .wrapper {
@@ -112,10 +112,8 @@ button:hover {
     left: 0;
 } */
 
-
-
 .slide::before {
-    /* content: '';
+  /* content: '';
     display: block;
     position: absolute;
     width: 100%;
@@ -125,52 +123,47 @@ button:hover {
     bottom: 0;
     left: 0; */
 
-
-
-
-    position: absolute;
-    content: "";
-    background: #000 url("../../../img/blur_pattern.png")repeat scroll 0 0;
-    content: "";
-    height: 100%;
-    left: 0;
-    opacity: 0.68;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    /* z-index: 1; */
-
+  position: absolute;
+  content: "";
+  background: #000 url("../../../img/blur_pattern.png") repeat scroll 0 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0.68;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  /* z-index: 1; */
 }
 
-
-
-.previousButton, .nextButton {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-		z-index: 10;
-		background: url('../../../img/lnr-chevron-right-circle\ 1.svg') no-repeat center center / 24px;
-		width: 32px;
-		height: 32px;
-		text-indent: -9999px;
-    cursor: pointer !important;
-    
+.previousButton,
+.nextButton {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background: url("../../../img/lnr-chevron-right-circle\ 1.svg") no-repeat
+    center center / 24px;
+  width: 32px;
+  height: 32px;
+  text-indent: -9999px;
+  cursor: pointer !important;
 }
 
-.previousButton:hover, .nextButton:hover {
-  background: url('../../../img/lnr-chevron-right-circle\ 1.svg') no-repeat center center / 32px;
- 
-
+.previousButton:hover,
+.nextButton:hover {
+  background: url("../../../img/lnr-chevron-right-circle\ 1.svg") no-repeat
+    center center / 32px;
 }
 
 .previousButton {
-  left:0;
+  left: 0;
   -webkit-transform: rotate(180deg) translateY(calc(50% + 0px));
-          transform: rotate(180deg) translateY(calc(50% + 0px));
+  transform: rotate(180deg) translateY(calc(50% + 0px));
 }
 
 .previousButton:hover {
-  left: -10px;
+  left: -1px;
 }
 
 .nextButton {
@@ -178,7 +171,7 @@ button:hover {
 }
 
 .nextButton:hover {
-  right: -10px;
+  right: -1px;
 }
 
 .slider-content {
@@ -193,25 +186,25 @@ button:hover {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
-.slider-content .inner button{
+.slider-content .inner button {
   -webkit-transition-delay: 0s;
-          transition-delay: 0s;
+  transition-delay: 0s;
 }
 
 .slider-content .inner h1 {
   font-weight: bold;
   margin: 0 auto;
   max-width: 840px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 55px;
   line-height: 1;
 }
 
 .slider-content .inner p {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   line-height: 1.5;
   margin: 20px auto 30px;
@@ -225,7 +218,7 @@ button:hover {
 }
 
 .slider-content section span {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .slider-content section span {
@@ -247,29 +240,31 @@ button:hover {
 }
 
 .slider-content section span strong {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   display: block;
 }
 
 @media (max-height: 500px) {
-  .slider-wrapper, .slide {
+  .slider-wrapper,
+  .slide {
     /* height: calc(100vh - 75px); */
-    height:100vh
-  }    
+    height: 100vh;
+  }
 }
 
 @media (max-width: 640px) {
-  .slider-wrapper, .slide {
+  .slider-wrapper,
+  .slide {
     /* height: calc(80vh - 75px); */
-    height:100vh
-  }    
+    height: 100vh;
+  }
 }
 
 @media (max-height: 600px) {
   .slider-content .inner h1 {
     font-size: 32px;
-  }    
+  }
 }
 
 @media (max-width: 640px) {
