--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,10 @@
   }
 } */
 
-.main-bg{
+.main-bg {
   /* background: url("./img/slider/slide_1.jpg") no-repeat fixed 0px 0px / cover !important; */
   height: 100vh !important;
-  width: 100%!important;
+  width: 100% !important;
 }
 
 /* .main-bg::before{
@@ -55,64 +55,58 @@
  position: absolute;
  top: 0;
  width: 100%; */
- /* z-index: 1; */
+/* z-index: 1; */
 
 /* } */
 
-
-.mouse{
+.mouse {
   position: relative;
   cursor: pointer;
   /* border-radius: 30px; */
   /* margin-top: -62px;  */
-    z-index: 1;
-    width: 2.5em;
-    left: 50%;
-    top: -18vmin;
-    /* display: flex; */
-    /* align-items: center; */
-    height: 5em;
-    transform: translate(-50%, -50%);
-    /* margin-right: 20px; */
-    /* min-width: 50px; */
-    border-radius: 2.5em;
-    border: 4px solid rgba(255, 255, 255, 0.8);
-
-
+  z-index: 1;
+  width: 2.5em;
+  left: 50%;
+  top: -18vmin;
+  /* display: flex; */
+  /* align-items: center; */
+  height: 5em;
+  transform: translate(-50%, -50%);
+  /* margin-right: 20px; */
+  /* min-width: 50px; */
+  border-radius: 2.5em;
+  border: 4px solid rgba(255, 255, 255, 0.8);
 }
 
-.mouse::after{
-
-  content: '';
-      position: absolute;
-      width: 20px;
-      top: 20px;
-      left: 50%;
-      -webkit-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background-color: #fff;
-      -webkit-animation: scroll 1s infinite alternate;
-      animation: scroll 1s infinite alternate;
-      
-    
+.mouse::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  top: 20px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  -webkit-animation: scroll 1s infinite alternate;
+  animation: scroll 1.3s infinite alternate;
 }
 
 @keyframes scroll {
-  100% {transform: translate(-50%, 15px)}
+  100% {
+    transform: translate(-50%, 15px);
+  }
 }
-
 
 /* .section-team::before{
 width: 0  !important;
 } */
 
-
-.section-outline::before{
+.section-outline::before {
   content: "";
-  background: transparent url("./img/bottom-white.png")repeat scroll 0 0;
+  background: transparent url("./img/bottom-white.png") repeat scroll 0 0;
   height: 0.4em;
   left: 0;
   opacity: 1;
@@ -122,12 +116,13 @@ width: 0  !important;
   -webkit-transform: rotateX(180deg);
   bottom: -1px;
   top: auto;
-  z-index: 1
+  z-index: 1;
 }
 
-.section-outline::after, .footer-section::after{
+.section-outline::after,
+.footer-section::after {
   content: "";
-  background: transparent url("./img/bottom-white.png")repeat scroll 0 0;
+  background: transparent url("./img/bottom-white.png") repeat scroll 0 0;
   height: 0.4em;
   left: 0;
   opacity: 1;
@@ -137,19 +132,19 @@ width: 0  !important;
   transform: rotateX(360deg);
   bottom: auto;
   top: -1px;
-  z-index: 1
+  z-index: 1;
 }
 
 .section-dark-cover::before {
   background: black url("./img/blur_pattern.png") repeat scroll 0 0;
-    content: "";
-    height: 100%;
-    left: 0;
-    opacity: 0.75;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    /* z-index: 1;*/
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0.75;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  /* z-index: 1;*/
 }
 
 .footer-dark-cover::before {
@@ -157,7 +152,7 @@ width: 0  !important;
   content: "";
   height: 100%;
   left: 0;
-  opacity: 0.90;
+  opacity: 0.9;
   position: absolute;
   top: 0;
   width: 100%;
